# InductiveMiner

./: CMakeLists.txt  cut_to_tree.odt
FrontPython/res/: Model.txt
FrontPython/tools/: main.py  src
StableVersion/: readmi.md
StableVersion/input/: inductive1.ind  inductive2.ind  inductive5.ind  input.ind
StableVersion/res/: Petri_net.dot
StableVersion/tools/: main.py  src
resource/: input.txt
src/: CMakeLists.txt  Component.cpp  Component.h  Event.cpp  Footprint.h  Inductive_miner_algorithm.cpp  Inductive_miner_algorithm.h  Node.h  Petri_net.cpp  Petri_net.h  Place.cpp  Place.h  ProcessTree.cpp  ProcessTree.h  main.cpp
src/components/: Component.cpp  Component.h  Node.cpp  Node.h  Petri_net.cpp  Petri_net.h
src/proto/: logs.proto  mining.proto  petri_net.proto
src/tools/: Event.h  Footprint.cpp  Footprint.h  Trace.cpp  Trace.h
test/: CMakeLists.txt
tests/: CMakeLists.txt  Components_test.cpp  Inductive_test.cpp  Tools_test.cpp
tests/resource/: inductive3  parallel
