add_executable(main Inductive_miner_algorithm.cpp Inductive_miner_algorithm.h main.cpp tools/Event.cpp tools/Event.h tools/Footprint.cpp tools/Footprint.h tools/ProcessTree.h tools/ProcessTree.cpp tools/Trace.cpp tools/Trace.h components/Component.h components/Component.cpp components/Node.cpp components/Node.h components/Petri_net.h components/Petri_net.cpp ../test/Algortihm_B_test.cpp )