add_executable(src Inductive_miner_algorithm.cpp Inductive_miner_algorithm.h main.cpp tools/Event.cpp tools/Event.h tools/Footprint.cpp tools/Footprint.h  tools/Trace.cpp tools/Trace.h components/Component.h components/Component.cpp components/Node.cpp components/Node.h components/Petri_net.h components/Petri_net.cpp)